--- a/cubic-ui/src/styles/topbar.scss
+++ b/cubic-ui/src/styles/topbar.scss
@@ -16,6 +16,15 @@
       color: rgb(191, 203, 217);
       float: left;
     }
+    .txt {
+      padding: 0 20px;
+      line-height: 56px;
+      font-size: 18px;
+      font-weight: bold;
+      color: rgb(191, 203, 217);
+      float: left;
+      font-family:"Microsoft YaHei";
+    }
     .el-menu {
       float: left;
       border: none!important;
