--- a/cubic-ui/src/styles/variables.scss
+++ b/cubic-ui/src/styles/variables.scss
@@ -6,6 +6,9 @@ $subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 $menuBg:#304156;
 $menuHover:#263445;
 
+$leftBarBg:#3d5b80;
+$leftBarHover:#293d55;
+
 $subMenuBg:#1f2d3d;
 $subMenuHover:#001528;
 
