--- a/cubic-ui/src/styles/sidebar.scss
+++ b/cubic-ui/src/styles/sidebar.scss
@@ -9,16 +9,16 @@
     position: relative;
   }
   .sidebarHide {
-    margin-left: 0!important;
+    // margin-left: 0!important;
   }
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
-    background-color: $menuBg;
+    // background-color: $leftBarBg;
     // height: 100%;
     height: $contentHeight;
     position: fixed;
-    font-size: 0px;
+    // font-size: 0px;
     // top: 0;
     top: $topBarHeight;
     bottom: 0;
@@ -64,8 +64,8 @@
     }
 
     .el-menu {
-      border: none;
-      height: 100%;
+      // border: none;
+      height: calc(100% - 144px);
       width: 100% !important;
     }
 
@@ -73,7 +73,7 @@
     .submenu-title-noDropdown,
     .el-submenu__title {
       &:hover {
-        background-color: $menuHover !important;
+        // background-color: $menuHover !important;
       }
     }
 
@@ -84,21 +84,21 @@
     & .nest-menu .el-submenu>.el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
-      background-color: $subMenuBg !important;
+      // background-color: $subMenuBg !important;
 
       &:hover {
-        background-color: $subMenuHover !important;
+        // background-color: $subMenuHover !important;
       }
     }
   }
 
   .hideSidebar {
     .sidebar-container {
-      width: 54px !important;
+      width: 210px !important;
     }
 
     .main-container {
-      margin-left: 54px;
+      margin-left: 210px;
     }
 
     .submenu-title-noDropdown {
@@ -190,7 +190,7 @@
   .el-menu-item {
     &:hover {
       // you can use $subMenuHover
-      background-color: $menuHover !important;
+      // background-color: $menuHover !important;
     }
   }
 
