--- a/cubic-ui/src/styles/sidebar.scss
+++ b/cubic-ui/src/styles/sidebar.scss
@@ -81,9 +81,9 @@
       }
     }
 
-    .is-active>.el-submenu__title {
-      color: $subMenuActiveText !important;
-    }
+    // .is-active>.el-submenu__title {
+    //   color: $subMenuActiveText !important;
+    // }
 
     & .nest-menu .el-submenu>.el-submenu__title,
     & .el-submenu .el-menu-item {
